--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project: Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -12,26 +13,37 @@
           <h3>Header Logo</h3>
           <h1>This website is awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <button class="signup" type="button">Sign up</button>
         </div>
         <div class="righthead">
-            <ul>
+            <ul class="headlist">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
-            <img class="placeholder" src="">
+            <img class="placeholder" src="./pics/chevanon.jpg" style="width:600px;height:350px;">
         </div>
     </header>
     <div class="sectionone">
         <h2>Some random information.</h2>
-        <img class="pic" src="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img class="pic" src="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img class="pic" src="">
-        <div class="text">this is some subtext under an illustration or image</div>
-        <img class="pic" src="">
-        <div class="text">this is some subtext under an illustration or image</div>
+        <div class="pictures">
+            <div class="pictext">
+               <img class="pic" src="./pics/mateusz.jpg" style="width:200px;height:200px;">
+               <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pictext">
+                <img class="pic" src="./pics/skyler.jpg" style="width:200px;height:200px;">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pictext">
+                <img class="pic" src="./pics/alexas.jpg" style="width:200px;height:200px;">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pictext">
+                <img class="pic" src="./pics/fotos.jpg" style="width:200px;height:200px;">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="sectiontwo">
         <h4>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</h4>
@@ -41,7 +53,7 @@
         <div class="bluesquare">
             <h4>Call to action! It's time!</h4>
             <p class="ctatext">Sign up for our productby clicking that button right over there!</p>
-            <button class="signup">Sign up</button>
+            <button class="signupp" type="button">Sign up</button>
         </div>
         
     <footer class="footer">
