set complete html and css structure

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="sectionone">
-        <h2>Some random information.</h2>
+        <h2 class="infotitle">Some random information.</h2>
         <div class="pictures">
             <div class="pictext">
                <img class="pic" src="./pics/mateusz.jpg" style="width:200px;height:200px;">
@@ -46,16 +46,19 @@
         </div>
     </div>
     <div class="sectiontwo">
-        <h4>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</h4>
+        <h6>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</h6>
         <p class="quotetext">-Thor, God of Thunder</p>
     </div>
     <div class="sectionthree">
         <div class="bluesquare">
-            <h4>Call to action! It's time!</h4>
-            <p class="ctatext">Sign up for our productby clicking that button right over there!</p>
+          <div class="newtext">
+            <p class="ctatext">Call to action! It's time!</p>
+            <p>Sign up for our productby clicking that button right over there!</p>
+          </div>
             <button class="signupp" type="button">Sign up</button>
         </div>
         
+    </div>
     <footer class="footer">
         <p>Copyright © The Odin Project 2021</p>
     </footer>
